# laika

./: .gitignore  Cargo.toml  README.md  build.rs
data/: spam.yaml  workflow.yaml
laika/: Cargo.toml
laika/src/: main.rs
laika_combiner/: Cargo.toml
laika_combiner/data/: spam.yaml
laika_combiner/schemas/: event_schema.capnp
laika_combiner/src/: action.rs  errors.rs  event_handler.rs  event_schema_capnp.rs  lib.rs  predicate_engine.rs  rules.rs  storage.rs
laika_combiner/src/config/: builder.rs  mod.rs
laika_combiner/src/connections/: file.rs  mod.rs  rabbitmq.rs  stdout.rs
laika_combiner/src/event/: context.rs  event_serde.rs  mod.rs
laika_combiner/src/event_processor/: processor.rs
laika_combiner/src/matcher/: builder.rs  mod.rs
laika_combiner/src/template/: error.rs  mod.rs  values.rs
laika_combiner/src/utils/: extract_json.rs  parse_time.rs
laika_combiner/tests/common/: mod.rs  test_utils.rs
laika_combiner/tests/e2e/: engine_tests.rs  mod.rs
laika_combiner/tests/fixtures/configs/: basic.yaml
laika_combiner/tests/fixtures/outputs/: single_event_output.jsonl
src/: action.rs  broker.rs  consts.rs  errors.rs  event.rs  event_handler.rs  flow.rs  flow_definition.rs  lib.rs  main.rs  rules.rs  storage.rs  timing.rs
src/config/: builder.rs  mod.rs
src/event/: mod.rs
src/event_processor/: processor.rs
src/matcher/: builder.rs  mod.rs
src/predicate_engine/: mod.rs
src/rules/: mod.rs
src/rules_engine/: mod.rs
src/submitters/: mod.rs  rabbitmq.rs  stdout.rs
src/template/: mod.rs  values.rs
src/utils/: mod.rs
(+5 files in other folders)
