[package]
name = "laika_combiner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
serde_yaml = "0.9.34+deprecated"
rocksdb = "0.23"
bincode = { version = "1.3.3" }
serde_json = "1.0.135"
time = { version = "0.3.37", features = ["serde"] }
zmq = "0.10.0"
tracing = "0.1.41"
fs2 = "0.4.3"
deno_core = "0.334.0"


[dev-dependencies]
tempfile = "3.8"
