[package]
name = "laika_combiner"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
serde_yaml = "0.9.34+deprecated"
rocksdb = "0.23"
bincode = { version = "1.3.3" }
serde_json = "1.0.135"
time = { version = "0.3.37", features = ["serde"] }
zmq = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
fs2 = "0.4.3"
deno_core = "0.338.0"
async-trait = "0.1.86"
lapin = "2.5.0"
tracing-test = "0.2.5"
regex = "1.11.1"
uuid = { version = "1.12.1", features = ["v4"] }
capnp = "0.20"
tokio = "1.43.0"
futures = "0.3.31"

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
tempfile = "3.8"

